--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Code Louisville Fullstack JavaScript final project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Kimiko",
   "license": "ISC",
