--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "Kimiko",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
-    "pug": "^2.0.0-rc.4"
+    "express": "^4.16.2"
   }
 }
