--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kimiko",
   "license": "ISC",
   "dependencies": {
+    "angularjs-datepicker": "^2.1.23",
     "bcrypt": "^1.0.3",
     "body-parser": "1.18.2",
     "express": "^4.16.2",
